Added schedule and fixed description for the learn it box

--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,11 @@ div.info-quote {
 .fade-on-load {
     opacity: 0;
 }
+
+#schedule-table {
+    border-color: transparent;
+}
+
+#schedule-item {
+    border-color: #03385F;
+}
